hobbies inpud id error fix

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <tr>
                             <td>Hobbies : </td>
                             <td>
-                                <select name="Hobbies" id="city" multiple>
+                                <select name="Hobbies" id="Hobbies" multiple>
                                     <option value="Cricket" selected>Cricket</option>
                                     <option value="Football">Football</option>
                                     <option value="Hockey">Hockey</option>
