success form go back url fix

--- a/success.html
+++ b/success.html
@@ -28,7 +28,7 @@
         </div>
 
         <div>
-            <h1><a href="./RegForm.html">Go Back</a></h1>
+            <h1><a href="./index.html">Go Back</a></h1>
         </div>
         <p>Code by : Aqib Naeem Akhtar 71305</p>
     </center>
